# webadmin

./: Cargo.toml  Dioxus.toml  README.md  Trunk.toml  index.html  tailwind.config.js
public/: styles.css
src/: lib.rs  main.rs
src/components/layout/: header.rs  mod.rs  sidebar.rs
src/pages/: auth.rs  index.rs  mod.rs  not_found.rs
src/pages/dashboard/: mod.rs  overview.rs  performance.rs
